# Data-Eng-Workshop

./: .gitignore  Database.md  LICENSE  Readme.md  Request.md  docker-compose.yml
.github/workflows/: docker.yml
airflow-demo/: .env  CHANGELOG.md  README.md  airflow.cfg  main.py  pyproject.toml  run.sh  validate_dags.py
airflow-demo/airflow/: airflow.cfg  airflow.db  airflow.db-shm  airflow.db-wal  simple_auth_manager_passwords.json.generated
airflow-demo/airflow/dags/: 01_hello_world_dag.py  02_simple_etl_dag.py  03_nyc_data_pipeline.py  04_flights_dag.py  example_dag.py  nyc_dag.py
airflow-demo/airflow/dags/functions/: utils.py
airflow-demo/airflow/dags/src/: __init__.py  database.py  download.py  save.py  transform.py  visualize.py
capstone/airflow/: Dockerfile  dbt_requirements.txt  requirements.txt
capstone/superset/: Dockerfile  requirements.txt
dbt_projects/: DBT_PROJECT_GUIDE.md  FILES_CREATED.txt  PROJECT_COMPLETION_SUMMARY.md
dbt_projects/dbt_demo/: .user.yml  CHANGELOG.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  SUGGESTIONS.md  dbt_project.yml  (+1 more)
docker/: docker-compose.yml
notebooks/: 01-Syntaxe et Variables.ipynb  02-Logging en Python.ipynb  05-Secrets et Variables d'environement.ipynb  07-Manipulation-des-données-avec-Polars.ipynb
python_project/: .env  README.md  main.py  pyproject.toml
sql/: CTE-VS-Subqueries.sql  Dates Functions.sql  Query-Prod-Example.sql  README.md  Request.sql  Windows Functions .sql  seed_dbt.sql  sql-seance-1.sql  tests.sql
visualisation/: docker-compose.yml
(+99 files in other folders)
