[project]
name = "airflow-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=3.1.0",
    "adbc-driver-manager>=1.8.0",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "pandas>=2.3.3",
    "apache-airflow-providers-mongo>=5.2.2",
    "duckdb>=1.4.1",
    "pymongo>=4.15.3",
]
